<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:background="#F8F8F8">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|left"
            android:layout_marginLeft="22dip"
            android:text="@string/fule_cancel"
            android:textColor="#5677ee"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tx_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:paddingBottom="10dip"
            android:paddingLeft="15dip"
            android:paddingRight="15dip"
            android:paddingTop="10dip"
            android:text="@string/fule_sure"
            android:textColor="#5677ee"
            android:textSize="14sp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="horizontal"
            android:paddingBottom="5dip"
            android:paddingTop="5dip">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.imaiduoduo.datetime.fulepicker.LoopView
                    android:id="@+id/loop_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dip"
                    android:layout_gravity="center_vertical"
                    android:textSize="16sp"
                    android:text="@string/fule_year"
                    android:textColor="#0C1621" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_weight="1">

                <com.imaiduoduo.datetime.fulepicker.LoopView
                    android:id="@+id/loop_month"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_gravity="center_vertical"
                    android:textSize="16sp"
                    android:text="@string/fule_month"
                    android:textColor="#0C1621" />
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.imaiduoduo.datetime.fulepicker.LoopView
                    android:id="@+id/loop_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="2dp"
                    android:textSize="16sp"
                    android:text="@string/fule_day"
                    android:textColor="#0C1621" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="15dip"
            android:background="#A5A5A5" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="15dip"
            android:background="#A5A5A5" />

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#E2E2E2" />

</LinearLayout>